--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node src/index.js",
-    "build": "npm install && tsc",
+    "build": "npm install",
     "dev": "nodemon src/index.js"
   },
   "keywords": [],
