--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 MONGODB_URL=mongodb+srv://adeeshaharshana_db_user:Recoge%40123@mens.twfik4x.mongodb.net/mens?retryWrites=true&w=majority&appName=mens
 PORT=3000
+FRONTEND_URL=https://recoge.netlify.app/
